@@ -292,6 +292,9 @@
   "enchantment.valoria.bleeding": "Кровотечение",
   "enchantment.valoria.explosive_flame": "Взрывное пламя",
   "enchantment.valoria.radius": "Радиус",
+  "enchantment.valoria.explosive_flame.desc": "Заряженные атаки пламекоса будут вызывать взрыв",
+  "enchantment.valoria.bleeding.desc": "Шанс наложить кровотечение на врага",
+  "enchantment.valoria.radius.desc": "Увеличивает радиус для способностей атаки по радиусу.",
   "entity.valoria.draugr": "Драург",
   "entity.valoria.goblin": "Гоблин",
   "entity.valoria.kunai": "Кунай",
