@@ -292,6 +292,9 @@
   "enchantment.valoria.bleeding": "Кровотеча",
   "enchantment.valoria.explosive_flame": "Вибухове полум'я",
   "enchantment.valoria.radius": "Радіус",
+  "enchantment.valoria.explosive_flame.desc": "Заряджені атаки Blazereap будуть залишати по-собі вибух",
+  "enchantment.valoria.bleeding.desc": "Шанс накласти кровотечу на ціль",
+  "enchantment.valoria.radius.desc": "Збільшує радіус для здібностей атаки по радіусу",
   "entity.valoria.draugr": "Драург",
   "entity.valoria.goblin": "Гоблін",
   "entity.valoria.kunai": "Kunai",
